# geiger

./: .cproject  .gitmodules  .mxproject  .project  CMakeLists.txt  README.md  geiger.ioc  readme.md
BlueNRG_MS/App/: app_bluenrg_ms.c  app_bluenrg_ms.h  beacon_utils.h  eddystone_beacon.c  eddystone_beacon.h  sensor.c  sensor.h  sensor_service.c  sensor_service.h
Core/Inc/: RTE_Components.h  main.h  stm32f4xx_it.h  stm32f4xx_nucleo_bus.h
Core/Src/: main.c  ring_buffer.c  ring_buffer.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_nucleo_bus.c
Drivers/BSP/STM32F4xx_Nucleo/: stm32f4xx_nucleo.c  stm32f4xx_nucleo.h
client/android/: README.md  build.gradle  settings.gradle
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/res/layout/: activity_connecting.xml  activity_connection_error.xml  activity_main.xml
client/android/app/src/main/res/values/: strings.xml
client/android/gradle/wrapper/: gradle-wrapper.properties
firmware/: .mxproject  README.md  geiger.ioc
firmware/BlueNRG_MS/App/: app_bluenrg_ms.c  gatt_db.c  gatt_db.h
firmware/Core/Inc/: main.h  stm32f4xx_it.h  stm32f4xx_nucleo_bus.h
firmware/Core/Src/: main.c  stm32f4xx_nucleo_bus.c
firmware/Drivers/BSP/STM32F4xx_Nucleo/: stm32f4xx_nucleo.h
hardware/: README.md  geiger.brd  geiger.sch  geiger_shield.asc  geiger_shield2.dch  geiger_shield2.dip  geiger_shield2_Top.gbr
zfirm/: CMakeLists.txt  README.md  prj.conf
zfirm/boards/: nucleo_f401re.overlay
zfirm/src/: boost_drv.c  boost_drv.h  cli.c  log.h  main.c
(+3 files in other folders)
